// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > produces correct output for error-404 template 1`] = `
".grid {
  display: grid;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.max-w-520px {
  max-width: 520px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-full {
  width: 100%;
}
.flex {
  display: flex;
}
.cursor-pointer {
  cursor: pointer;
}
.appearance-none {
  appearance: none;
}
.place-content-center {
  place-content: center;
}
.items-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}
.overflow-hidden {
  overflow: hidden;
}
.border-0 {
  border-width: 0;
}
.bg-transparent {
  background-color: #0000;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.p-0 {
  padding: 0;
}
.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}
.text-center {
  text-align: center;
}
.text-\\[80px\\] {
  font-size: 80px;
}
.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}
.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.text-\\[\\#020420\\] {
  --un-text-opacity: 1;
  color: rgb(2 4 32 / var(--un-text-opacity));
}
.text-\\[\\#64748B\\] {
  --un-text-opacity: 1;
  color: rgb(100 116 139 / var(--un-text-opacity));
}
.hover\\:text-\\[\\#00DC82\\]:hover {
  --un-text-opacity: 1;
  color: rgb(0 220 130 / var(--un-text-opacity));
}
.text-inherit {
  color: inherit;
}
.font-medium {
  font-weight: 500;
}
.font-semibold {
  font-weight: 600;
}
.leading-none {
  line-height: 1;
}
.tracking-wide {
  letter-spacing: 0.025em;
}
.font-sans {
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}
.tabular-nums {
  --un-numeric-spacing: tabular-nums;
  font-variant-numeric: var(--un-ordinal) var(--un-slashed-zero)
    var(--un-numeric-figure) var(--un-numeric-spacing)
    var(--un-numeric-fraction);
}
.underline {
  text-decoration-line: underline;
}
.underline-offset-3 {
  text-underline-offset: 3px;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-\\[\\#020420\\] {
    --un-bg-opacity: 1;
    background-color: rgb(2 4 32 / var(--un-bg-opacity));
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (width>=640px) {
  .sm\\:text-\\[110px\\] {
    font-size: 110px;
  }
  .sm\\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }
}
"
`;

exports[`template > produces correct output for error-404 template 2`] = `
"*,
:after,
:before {
  box-sizing: border-box;
  border-style: solid;
  border-width: 0;
  border-color: var(--un-default-border-color, #e5e7eb);
}
:after,
:before {
  --un-content: "";
}
html {
  -webkit-text-size-adjust: 100%;
  tab-size: 4;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -webkit-tap-highlight-color: transparent;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  line-height: 1.5;
}
body {
  line-height: inherit;
  margin: 0;
}
h1,
h2 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}
a,
button {
  color: inherit;
}
button {
  font-feature-settings: inherit;
  font-variation-settings: inherit;
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  line-height: inherit;
  margin: 0;
  padding: 0;
  text-transform: none;
}
[type="button"],
button {
  -webkit-appearance: button;
  background-color: #0000;
  background-image: none;
}
h1,
h2,
p {
  margin: 0;
}
button {
  cursor: pointer;
}
[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x:;
  --un-pan-y:;
  --un-pinch-zoom:;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal:;
  --un-slashed-zero:;
  --un-numeric-figure:;
  --un-numeric-spacing:;
  --un-numeric-fraction:;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 #0000;
  --un-ring-shadow: 0 0 #0000;
  --un-shadow-inset:;
  --un-shadow: 0 0 #0000;
  --un-ring-inset:;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: #93c5fd80;
  --un-blur:;
  --un-brightness:;
  --un-contrast:;
  --un-drop-shadow:;
  --un-grayscale:;
  --un-hue-rotate:;
  --un-invert:;
  --un-saturate:;
  --un-sepia:;
  --un-backdrop-blur:;
  --un-backdrop-brightness:;
  --un-backdrop-contrast:;
  --un-backdrop-grayscale:;
  --un-backdrop-hue-rotate:;
  --un-backdrop-invert:;
  --un-backdrop-opacity:;
  --un-backdrop-saturate:;
  --un-backdrop-sepia:;
}
"
`;

exports[`template > produces correct output for error-500 template 1`] = `
".grid {
  display: grid;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.max-w-520px {
  max-width: 520px;
}
.min-h-screen {
  min-height: 100vh;
}
.place-content-center {
  place-content: center;
}
.overflow-hidden {
  overflow: hidden;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}
.text-center {
  text-align: center;
}
.text-\\[80px\\] {
  font-size: 80px;
}
.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}
.text-\\[\\#020420\\] {
  --un-text-opacity: 1;
  color: rgb(2 4 32 / var(--un-text-opacity));
}
.text-\\[\\#64748B\\] {
  --un-text-opacity: 1;
  color: rgb(100 116 139 / var(--un-text-opacity));
}
.font-semibold {
  font-weight: 600;
}
.leading-none {
  line-height: 1;
}
.tracking-wide {
  letter-spacing: 0.025em;
}
.font-sans {
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}
.tabular-nums {
  --un-numeric-spacing: tabular-nums;
  font-variant-numeric: var(--un-ordinal) var(--un-slashed-zero)
    var(--un-numeric-figure) var(--un-numeric-spacing)
    var(--un-numeric-fraction);
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-\\[\\#020420\\] {
    --un-bg-opacity: 1;
    background-color: rgb(2 4 32 / var(--un-bg-opacity));
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (width>=640px) {
  .sm\\:text-\\[110px\\] {
    font-size: 110px;
  }
  .sm\\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }
}
"
`;

exports[`template > produces correct output for error-500 template 2`] = `
"*,
:after,
:before {
  box-sizing: border-box;
  border-style: solid;
  border-width: 0;
  border-color: var(--un-default-border-color, #e5e7eb);
}
:after,
:before {
  --un-content: "";
}
html {
  -webkit-text-size-adjust: 100%;
  tab-size: 4;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -webkit-tap-highlight-color: transparent;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  line-height: 1.5;
}
body {
  line-height: inherit;
  margin: 0;
}
h1,
h2 {
  font-size: inherit;
  font-weight: inherit;
}
h1,
h2,
p {
  margin: 0;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x:;
  --un-pan-y:;
  --un-pinch-zoom:;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal:;
  --un-slashed-zero:;
  --un-numeric-figure:;
  --un-numeric-spacing:;
  --un-numeric-fraction:;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 #0000;
  --un-ring-shadow: 0 0 #0000;
  --un-shadow-inset:;
  --un-shadow: 0 0 #0000;
  --un-ring-inset:;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: #93c5fd80;
  --un-blur:;
  --un-brightness:;
  --un-contrast:;
  --un-drop-shadow:;
  --un-grayscale:;
  --un-hue-rotate:;
  --un-invert:;
  --un-saturate:;
  --un-sepia:;
  --un-backdrop-blur:;
  --un-backdrop-brightness:;
  --un-backdrop-contrast:;
  --un-backdrop-grayscale:;
  --un-backdrop-hue-rotate:;
  --un-backdrop-invert:;
  --un-backdrop-opacity:;
  --un-backdrop-saturate:;
  --un-backdrop-sepia:;
}
"
`;

exports[`template > produces correct output for loading template 1`] = `
":root {
  --nuxt-mint: #00dc82;
  --nuxt-mist: rgba(232, 255, 244, 0.88);
  --nuxt-dim: rgba(0, 220, 130, 0.55);
  --nuxt-logo: min(15vw, 99px);
}
*,
:after,
:before {
  box-sizing: border-box;
}
body,
html {
  margin: 0;
  width: 100%;
  height: 100%;
  background: #000;
  color: var(--nuxt-mist);
}
body {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  font-family: ui-sans-serif, system-ui, sans-serif;
  -webkit-font-smoothing: antialiased;
}
#nuxt-shader,
svg {
  display: block;
}
#nuxt-shader {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  touch-action: none;
  opacity: 0;
  transition: opacity 0.4s ease;
}
.nuxt-lockup {
  position: relative;
  z-index: 1;
  display: flex;
  align-items: flex-end;
  gap: calc(var(--nuxt-logo) / 6);
  text-decoration: none;
  color: inherit;
}
.nuxt-logo-slot {
  width: var(--nuxt-logo);
  height: calc(var(--nuxt-logo) * 32 / 48);
  flex: 0 0 var(--nuxt-logo);
  color: var(--nuxt-mint);
}
.nuxt-logo-slot > svg {
  width: 100%;
  height: 100%;
}
.nuxt-logo-slot > svg > path {
  fill: currentColor;
}
.nuxt-wordmark {
  width: calc(var(--nuxt-logo) * 1.5);
  height: calc(var(--nuxt-logo) * 0.5);
  color: #fff;
  transition: color 0.2s ease;
}
.nuxt-lockup:hover .nuxt-wordmark {
  color: var(--nuxt-mist);
}
.nuxt-corners {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  display: flex;
  justify-content: space-between;
  padding: 22px 26px;
  pointer-events: none;
  font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
  font-size: 11px;
  font-weight: 500;
  font-variant-numeric: tabular-nums;
  letter-spacing: 0.12em;
  line-height: 1;
}
.nuxt-home {
  color: var(--nuxt-dim);
  text-decoration: none;
  pointer-events: auto;
  transition: color 0.2s ease;
}
.nuxt-home:hover {
  color: var(--nuxt-mist);
}
.nuxt-version {
  color: var(--nuxt-mint);
}
.nuxt-progress {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}
.nuxt-progress-status {
  margin: 0 0 14px;
  text-align: center;
  font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
  font-size: 11px;
  font-weight: 500;
  font-variant-numeric: tabular-nums;
  letter-spacing: 0.08em;
  line-height: 1;
  color: var(--nuxt-dim);
  opacity: 0;
  transition: opacity 0.3s ease;
}
.nuxt-loader-bar {
  height: 2px;
  overflow: hidden;
  background: rgba(0, 220, 130, 0.16);
}
.nuxt-loader-bar > span {
  display: block;
  height: 100%;
  width: 32%;
  background: var(--nuxt-mint);
  transform: translateX(-120%);
  animation: nuxt-bar 1.8s ease-in-out infinite;
}
@keyframes nuxt-bar {
  0% {
    transform: translateX(-120%);
  }
  to {
    transform: translateX(360%);
  }
}
@media (prefers-reduced-motion: reduce) {
  .nuxt-loader-bar > span {
    width: 100%;
    transform: none;
    animation: none;
  }
}
"
`;

exports[`template > produces correct output for loading template 2`] = `
":root {
  --nuxt-mint: #00dc82;
  --nuxt-mist: rgba(232, 255, 244, 0.88);
  --nuxt-dim: rgba(0, 220, 130, 0.55);
  --nuxt-logo: min(15vw, 99px);
}
*,
:after,
:before {
  box-sizing: border-box;
}
body,
html {
  margin: 0;
  width: 100%;
  height: 100%;
  background: #000;
  color: var(--nuxt-mist);
}
body {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  font-family: ui-sans-serif, system-ui, sans-serif;
  -webkit-font-smoothing: antialiased;
}
#nuxt-shader,
svg {
  display: block;
}
#nuxt-shader {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  touch-action: none;
  opacity: 0;
  transition: opacity 0.4s ease;
}
@keyframes nuxt-bar {
  0% {
    transform: translateX(-120%);
  }
  to {
    transform: translateX(360%);
  }
}
"
`;

exports[`template > produces correct output for welcome template 1`] = `
".sr-only {
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
}
.absolute,
.sr-only {
  position: absolute;
}
.relative {
  position: relative;
}
.right-4 {
  right: 1rem;
}
.top-4 {
  top: 1rem;
}
.grid {
  display: grid;
}
.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.mb-6 {
  margin-bottom: 1.5rem;
}
.mt-1 {
  margin-top: 0.25rem;
}
.mt-4 {
  margin-top: 1rem;
}
.mt-6 {
  margin-top: 1.5rem;
}
.inline-block {
  display: inline-block;
}
.size-\\[18px\\] {
  width: 18px;
  height: 18px;
}
.size-4 {
  width: 1rem;
  height: 1rem;
}
.group:hover .group-hover\\:size-5,
.size-5 {
  width: 1.25rem;
  height: 1.25rem;
}
.h-\\[32px\\] {
  height: 32px;
}
.h-8 {
  height: 2rem;
}
.max-w-\\[980px\\] {
  max-width: 980px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-\\[32px\\] {
  width: 32px;
}
.w-full {
  width: 100%;
}
.flex {
  display: flex;
}
.inline-flex {
  display: inline-flex;
}
.flex-col {
  flex-direction: column;
}
.place-content-center {
  place-content: center;
}
.items-end {
  align-items: flex-end;
}
.items-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}
.gap-1 {
  gap: 0.25rem;
}
.gap-4 {
  gap: 1rem;
}
.gap-y-4 {
  row-gap: 1rem;
}
.border {
  border-width: 1px;
}
.border-\\[\\#00DC42\\]\\/50 {
  border-color: #00dc4280;
}
.border-\\[\\#00DC82\\] {
  --un-border-opacity: 1;
  border-color: rgb(0 220 130 / var(--un-border-opacity));
}
.border-gray-200 {
  --un-border-opacity: 1;
  border-color: rgb(224 224 224 / var(--un-border-opacity));
}
.border-green-600\\/10 {
  border-color: #00bb6a1a;
}
.border-green-600\\/20 {
  border-color: #00bb6a33;
}
.hover\\:border-\\[\\#00DC82\\]:hover {
  --un-border-opacity: 1;
  border-color: rgb(0 220 130 / var(--un-border-opacity));
}
.rounded {
  border-radius: 0.25rem;
}
.rounded-lg {
  border-radius: 0.5rem;
}
.bg-\\[\\#00DC42\\]\\/10 {
  background-color: #00dc421a;
}
.bg-\\[\\#00DC82\\]\\/5 {
  background-color: #00dc820d;
}
.bg-gray-50\\/10 {
  background-color: #f5f5f51a;
}
.bg-green-50 {
  --un-bg-opacity: 1;
  background-color: rgb(208 252 222 / var(--un-bg-opacity));
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.p-1 {
  padding: 0.25rem;
}
.p-6 {
  padding: 1.5rem;
}
.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}
.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}
.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}
.text-\\[12px\\] {
  font-size: 12px;
}
.text-base {
  font-size: 1rem;
  line-height: 1.5rem;
}
.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.group:hover .group-hover\\:text-\\[\\#00DC82\\],
.text-\\[\\#00DC82\\] {
  --un-text-opacity: 1;
  color: rgb(0 220 130 / var(--un-text-opacity));
}
.text-\\[\\#020420\\] {
  --un-text-opacity: 1;
  color: rgb(2 4 32 / var(--un-text-opacity));
}
.text-\\[\\#020420\\]\\/20 {
  color: #02042033;
}
.text-gray-500 {
  --un-text-opacity: 1;
  color: rgb(117 117 117 / var(--un-text-opacity));
}
.text-gray-700 {
  --un-text-opacity: 1;
  color: rgb(66 66 66 / var(--un-text-opacity));
}
.text-green-700 {
  --un-text-opacity: 1;
  color: rgb(0 153 86 / var(--un-text-opacity));
}
.hover\\:text-\\[\\#020420\\]:hover {
  --un-text-opacity: 1;
  color: rgb(2 4 32 / var(--un-text-opacity));
}
.font-bold {
  font-weight: 700;
}
.font-semibold {
  font-weight: 600;
}
.leading-none {
  line-height: 1;
}
.font-mono {
  font-family:
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    Liberation Mono,
    Courier New,
    monospace;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.focus-visible\\:ring-2:focus-visible {
  --un-ring-width: 2px;
  --un-ring-offset-shadow: var(--un-ring-inset) 0 0 0
    var(--un-ring-offset-width) var(--un-ring-offset-color);
  --un-ring-shadow: var(--un-ring-inset) 0 0 0
    calc(var(--un-ring-width) + var(--un-ring-offset-width))
    var(--un-ring-color);
  box-shadow:
    var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);
}
.transition-all {
  transition-property: all;
  transition-duration: 0.15s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
@media (prefers-color-scheme: dark) {
  .dark\\:border-\\[\\#00DC82\\]\\/50 {
    border-color: #00dc8280;
  }
  .dark\\:border-\\[\\#00DC82\\]\\/80,
  .group:hover .group-hover\\:dark\\:border-\\[\\#00DC82\\]\\/80 {
    border-color: #00dc82cc;
  }
  .dark\\:border-white\\/10 {
    border-color: #ffffff1a;
  }
  .dark\\:border-white\\/20 {
    border-color: #fff3;
  }
  .hover\\:dark\\:border-\\[\\#00DC82\\]:hover {
    --un-border-opacity: 1;
    border-color: rgb(0 220 130 / var(--un-border-opacity));
  }
  .dark\\:bg-\\[\\#020420\\] {
    --un-bg-opacity: 1;
    background-color: rgb(2 4 32 / var(--un-bg-opacity));
  }
  .dark\\:bg-white\\/5 {
    background-color: #ffffff0d;
  }
  .dark\\:text-\\[\\#00DC82\\] {
    --un-text-opacity: 1;
    color: rgb(0 220 130 / var(--un-text-opacity));
  }
  .dark\\:text-gray-200 {
    --un-text-opacity: 1;
    color: rgb(224 224 224 / var(--un-text-opacity));
  }
  .dark\\:text-gray-400 {
    --un-text-opacity: 1;
    color: rgb(158 158 158 / var(--un-text-opacity));
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
  .dark\\:text-white\\/40 {
    color: #fff6;
  }
  .dark\\:hover\\:text-white:hover {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
  .group:hover .group-hover\\:dark\\:text-gray-100 {
    --un-text-opacity: 1;
    color: rgb(238 238 238 / var(--un-text-opacity));
  }
}
@media (width>=640px) {
  .sm\\:col-span-2 {
    grid-column: span 2 / span 2;
  }
  .sm\\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
  .sm\\:mb-0 {
    margin-bottom: 0;
  }
  .sm\\:mt-0 {
    margin-top: 0;
  }
  .sm\\:mt-10 {
    margin-top: 2.5rem;
  }
  .sm\\:mt-6 {
    margin-top: 1.5rem;
  }
  .sm\\:h-12 {
    height: 3rem;
  }
  .sm\\:gap-6 {
    gap: 1.5rem;
  }
  .sm\\:px-2\\.5 {
    padding-left: 0.625rem;
    padding-right: 0.625rem;
  }
  .sm\\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  .sm\\:py-1\\.5 {
    padding-top: 0.375rem;
    padding-bottom: 0.375rem;
  }
  .sm\\:text-\\[14px\\] {
    font-size: 14px;
  }
  .sm\\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
@media (width>=1024px) {
  .lg\\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}
"
`;

exports[`template > produces correct output for welcome template 2`] = `
"*,
:after,
:before {
  box-sizing: border-box;
  border-style: solid;
  border-width: 0;
  border-color: var(--un-default-border-color, #e5e7eb);
}
:after,
:before {
  --un-content: "";
}
html {
  -webkit-text-size-adjust: 100%;
  tab-size: 4;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -webkit-tap-highlight-color: transparent;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  line-height: 1.5;
}
body {
  line-height: inherit;
  margin: 0;
}
h1,
h2 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  color: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}
h1,
h2,
p,
ul {
  margin: 0;
}
ul {
  padding: 0;
  list-style: none;
}
svg {
  vertical-align: middle;
  display: block;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x:;
  --un-pan-y:;
  --un-pinch-zoom:;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal:;
  --un-slashed-zero:;
  --un-numeric-figure:;
  --un-numeric-spacing:;
  --un-numeric-fraction:;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 #0000;
  --un-ring-shadow: 0 0 #0000;
  --un-shadow-inset:;
  --un-shadow: 0 0 #0000;
  --un-ring-inset:;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: #93c5fd80;
  --un-blur:;
  --un-brightness:;
  --un-contrast:;
  --un-drop-shadow:;
  --un-grayscale:;
  --un-hue-rotate:;
  --un-invert:;
  --un-saturate:;
  --un-sepia:;
  --un-backdrop-blur:;
  --un-backdrop-brightness:;
  --un-backdrop-contrast:;
  --un-backdrop-grayscale:;
  --un-backdrop-hue-rotate:;
  --un-backdrop-invert:;
  --un-backdrop-opacity:;
  --un-backdrop-saturate:;
  --un-backdrop-sepia:;
}
"
`;
